--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		border:1px solid #bbb;
 	} 
 
-	
+
 	body {font-family:sans-serif;}
 
 	#content {
@@ -37,7 +37,8 @@
 		display:block;
 		padding:0;
 		margin:0;
-		width:960px;
+		width:1200px; 
+		height:400px;
 		background:#000;
 		color:#eee;
 	}
